# Logger

./: CMakeLists.txt  README.md  main.cpp
include/: Loader.hpp  Logger.hpp  Processor.hpp
src/: Loader.cpp  Logger.cpp  Processor.cpp
